--- a/pkg/acts_as_api-0.0.1/History.txt
+++ b/pkg/acts_as_api-0.0.1/History.txt
@@ -1,8 +1,13 @@
-=== 0.0.3 2010-01-01
+=== 0.1.3 2010-07-04
+
+* Support for including methods of associated models.
+* Better root name determination for arrays.
+
+=== 0.0.3 2010-07-01
 
 * 1 small bugfix
 
-=== 0.0.2 2010-01-01
+=== 0.0.2 2010-07-01
 
 * 1 major enhancement:
   * Added a wrapping root node for JSON responses by default.
