--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 0.1.4 2010-07-04
+
+* Added better documentation.
+
 === 0.1.3 2010-07-04
 
 * Support for including methods of associated models.
