--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 0.3.4 2011-04-26
+
+* Fixed a bug concerning the inheritance of sub templates/additional options
+
 === 0.3.3 2011-04-24
 
 * Added support for :if and :unless options
