--- a/README.rdoc
+++ b/README.rdoc
@@ -45,7 +45,7 @@ https://github.com/fabrik42/acts_as_api/wiki
 * Easy but very flexible syntax for defining the templates
 * XML, JSON and JSON-P support out of the  box, easy to extend
 * Minimal dependecies (you can also use it without Rails)
-* Does not rely on ActiveRecord (can be used with other ORMs like Mongoid)
+* Out of the box support for *ActiveRecord* and *Mongoid*
 * Supports multiple api rendering templates per model. This is especially useful for API versioning or for example for private vs. public access points to a user’s profile.
 
 === Requirements:
