--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 0.3.9 2011-09-24
+
+* Spec suite now running on Rails 3.1
+* Fixed naming issue with ActiveRecord::Relation (Ticket #35)
+
 === 0.3.8 2011-06-21
 
 * Fixed Rails 3.1 deprecation warning
